Tested in new Git-based project.

--- a/results/B2BGateway.import.response.html
+++ b/results/B2BGateway.import.response.html
@@ -11,7 +11,7 @@
 <body>
 <h2>DataPower Export / Import Utility</h2>
 			
-			This DataPower-based utility allows the export from a source DataPower and domain to a target DataPower and domain.<p></p>
+			This utility allows the export from a source DataPower and domain to a target DataPower and domain.<p></p>
 			The utility makes an XMI / SOMA call to the source, and subsequently makes an XMI / SOMA call to the target.
 			
 			<h3>Details</h3>
@@ -355,6 +355,6 @@
 </table>
 <hr>
 			Imported date: 2017-08-04
-			at: 09:58:11 EDT<p></p>
+			at: 10:12:30 EDT<p></p>
 </body>
 </html>
