Changed to use admin-services-settings.xml. Added set-config PasswordAliases.

--- a/results/B2BGateway.import.response.html
+++ b/results/B2BGateway.import.response.html
@@ -18,7 +18,7 @@
 <table border="1">
 <tr>
 <td>Exported from host: </td>
-<td>source-datapower</td>
+<td>source-datapower:5550</td>
 </tr>
 <tr>
 <td>Exported device name: </td>
@@ -30,7 +30,7 @@
 </tr>
 <tr>
 <td>Imported to host: </td>
-<td>target-datapower<br>
+<td>target-datapower:5550<br>
 </td>
 </tr>
 <tr>
@@ -355,6 +355,6 @@
 </table>
 <hr>
 			Imported date: 2017-08-04
-			at: 10:12:30 EDT<p></p>
+			at: 11:56:03 EDT<p></p>
 </body>
 </html>
