Tidied up, added comments to export-import.sh.

--- a/results/B2BGateway.import.response.html
+++ b/results/B2BGateway.import.response.html
@@ -68,7 +68,7 @@
 <td class="css_normal"><i>HubOwner_AS2</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -76,7 +76,7 @@
 <td class="css_normal"><i>HubOwner_http</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -100,7 +100,7 @@
 <td class="css_highlight"><i>datapower</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -108,7 +108,7 @@
 <td class="css_highlight"><i>hubowner</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -116,7 +116,7 @@
 <td class="css_highlight"><i>hubowner</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -124,7 +124,7 @@
 <td class="css_normal"><i>HubOwner_Decr</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -132,7 +132,7 @@
 <td class="css_normal"><i>HubOwner_Sig</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -140,7 +140,7 @@
 <td class="css_normal"><i>HubOwner_Int</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -148,7 +148,7 @@
 <td class="css_highlight"><i>partner</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -156,7 +156,7 @@
 <td class="css_normal"><i>Partner_Sigval</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -164,7 +164,7 @@
 <td class="css_normal"><i>Partner_Ext</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -172,7 +172,7 @@
 <td class="css_normal"><i>CustomXML</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -196,7 +196,7 @@
 <td class="css_normal"><i>HubOwner</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -204,7 +204,7 @@
 <td class="css_normal"><i>Partner_AS2</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -212,7 +212,7 @@
 <td class="css_normal"><i>Partner_http</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -220,7 +220,7 @@
 <td class="css_normal"><i>HubOwner_Sigval</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -228,7 +228,7 @@
 <td class="css_normal"><i>HubOwner_Ext</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -236,7 +236,7 @@
 <td class="css_highlight"><i>partner</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -244,7 +244,7 @@
 <td class="css_normal"><i>Partner_Decr</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -252,7 +252,7 @@
 <td class="css_normal"><i>Partner_Sig</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -260,7 +260,7 @@
 <td class="css_normal"><i>Partner_Int</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 <tr>
@@ -268,7 +268,7 @@
 <td class="css_normal"><i>Partner</i></td>
 <td>false</td>
 <td>on</td>
-<td>exists</td>
+<td>new</td>
 <td>SUCCESS</td>
 </tr>
 </table>
@@ -354,7 +354,7 @@
 </tr>
 </table>
 <hr>
-			Imported date: 2017-08-04
-			at: 12:33:10 EDT<p></p>
+			Imported date: 2017-08-05
+			at: 06:25:11 EDT<p></p>
 </body>
 </html>
